--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
 
 /* Your CSS Code here. */
+.holder{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.item{
+	height: 100px;
+	width: 100px;
+	font-size: 40px;
+	color: black;
+}
+
+.red { background: red; }
+.blue { background: blue; }
+.green { background: green; }
